--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -67,8 +67,9 @@
 						<div class="menu-title">Administration Panel</div>
 					</a>
 					<ul>
-						<li> <a href="{% url 'manageUser' %}"><i class='bx bx-home'></i>Dashboard</a></li>
+						<li> <a href="{% url 'index' %}"><i class='bx bx-home'></i>Dashboard</a></li>
 						<li> <a href="{% url 'manageUser' %}"><i class='bx bx-user-plus'></i>Manage Users</a></li>
+						<li> <a href="{% url 'manageCompany' %}"><i class='bx bx-user-plus'></i>Manage Companies</a></li>
 					</ul>
 				</li>
 			</ul>
